--- a/app/src/main/res/layout/fragment_wizard_profile.xml
+++ b/app/src/main/res/layout/fragment_wizard_profile.xml
@@ -50,16 +50,20 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/wizard_tab_layout"
-            android:layout_width="match_parent"
-            app:tabIndicatorHeight="0dp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingLeft="@dimen/pd_xxxlarge"
+            android:paddingRight="@dimen/pd_xxxlarge"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp"/>
 
         <Button
             android:id="@+id/wizard_action"
             style="@style/text.link.green"
-            android:layout_marginBottom="@dimen/pd_normal"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/pd_normal"
             android:text="@string/ag_continue"
             android:textAllCaps="true"/>
     </LinearLayout>
