--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -41,6 +41,7 @@
                     android:id="@+id/userPhone"
                     style="@style/text.small.white"
                     android:layout_marginLeft="@dimen/pd_xxsmall"
+                    android:layout_marginTop="-8dp"
                     android:ellipsize="end"
                     android:lines="1"
                     android:text="+7 915 186-32-03" />
