refs #96569 - подправлена верстка, учтен случай, если придуте ФИО а не только ФИ

--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -4,56 +4,49 @@
     android:background="@color/mainGreenColor"
     android:clickable="true">
 
-    <LinearLayout style="@style/linear">
+    <RelativeLayout
+        style="@style/root">
 
         <LinearLayout
             android:id="@+id/userContainer"
-            style="@style/item.linear.horizontal"
+            style="@style/item"
             android:layout_alignParentTop="true"
-            android:paddingBottom="@dimen/pd_xxsmall"
-            android:paddingLeft="@dimen/pd_xxxsmall"
-            android:paddingRight="@dimen/pd_xlarge"
-            android:paddingTop="@dimen/pd_xxsmall">
+            android:layout_margin="@dimen/pd_xsmall">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userAvatar"
                 android:layout_width="@dimen/vs_xxsmall"
                 android:layout_height="@dimen/vs_xxsmall"
-                android:layout_margin="@dimen/pd_xxxsmall"
                 android:src="@drawable/unlogin2" />
 
             <LinearLayout
-                style="@style/wrap.centered"
-                android:layout_gravity="start|center_vertical"
-                android:layout_height="@dimen/vs_xxsmall"
-
-                android:layout_marginLeft="@dimen/pd_xxsmall"
-                android:layout_marginStart="@dimen/pd_xxsmall"
-                android:orientation="vertical">
+                style="@style/linear"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/pd_xxsmall">
 
                 <TextView
+                    android:id="@+id/userName"
                     style="@style/text.large"
                     android:textColor="@color/menu_text"
-                    android:id="@+id/userName"
-                    android:gravity="center_vertical|left"
-                    android:layout_marginLeft="@dimen/pd_xxsmall"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="Игорь Семеречениский"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    tools:text="Игорь Семеречениский"/>
 
                 <TextView
                     android:id="@+id/userPhone"
                     style="@style/text.small.white"
-                    android:layout_marginLeft="@dimen/pd_xxsmall"
                     android:ellipsize="end"
                     android:lines="1"
-                    android:text="+7 915 186-32-03" />
+                    android:paddingTop="6dp"
+                    tools:text="+7 915 186-32-03" />
 
             </LinearLayout>
         </LinearLayout>
 
         <View
+            android:id="@+id/divider"
+            android:layout_below="@id/userContainer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/thin_separator"
             android:background="@color/menu_divider" />
@@ -64,6 +57,7 @@
             android:choiceMode="singleChoice"
             android:divider="@color/menu_divider"
             android:dividerHeight="@dimen/thin_separator"
+            android:layout_below="@id/divider"
             tools:context="ru.mos.polls.navigation.drawer.NavigationDrawerFragment" />
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
