--- a/app/src/main/res/layout/fragment_wizard_family.xml
+++ b/app/src/main/res/layout/fragment_wizard_family.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         style="@style/linear"
@@ -10,30 +10,32 @@
         <LinearLayout
             style="@style/item"
             android:orientation="vertical"
-            android:paddingTop="@dimen/pd_xxxsmall"
             android:paddingLeft="@dimen/pd_small"
-            android:paddingRight="@dimen/pd_small">
+            android:paddingRight="@dimen/pd_small"
+            android:paddingTop="@dimen/pd_xxxsmall">
 
             <android.support.v7.widget.AppCompatTextView
                 style="@style/text.small.gray"
                 android:text="Семейное положение"
-                android:textSize="@dimen/ts_xsmall"/>
+                android:textSize="@dimen/ts_xsmall" />
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/edit_martial_status"
-                style="@style/edit_profile"/>
+                android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
+                style="@style/edit_profile.input" />
 
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="3px"
-                android:background="@color/black_lightest"/>
+                android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
+                android:background="@color/black_lightest" />
         </LinearLayout>
 
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </layout>
