--- a/app/src/main/res/layout/layout_email_contact.xml
+++ b/app/src/main/res/layout/layout_email_contact.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:id="@+id/email_container"
         style="@style/item"
         android:visibility="gone">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_wrapper"
-            style="@style/item">
+            style="@style/text_input_layout">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/email"
-                style="@style/edit_profile"
+                style="@style/edit_profile.input"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress" />
 
