--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,7 @@
     <dimen name="pd_xxlarge">24dp</dimen>
     <dimen name="pd_xxxlarge">32dp</dimen>
     <!-- padding size minus !-->
+    <dimen name="pd_pd_xxxsmall_m">-4dp</dimen>
     <dimen name="pd_xnormal_m">-14dp</dimen>
     <dimen name="pd_normal_m">-16dp</dimen>
     <!-- text size !-->
