--- a/app/src/main/res/layout/fragment_custom_flat.xml
+++ b/app/src/main/res/layout/fragment_custom_flat.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.CustomFlatFragmentVM"/>
+            type="ru.mos.polls.newprofile.vm.CustomFlatFragmentVM" />
     </data>
 
     <LinearLayout
@@ -25,72 +25,72 @@
                 <TextView
                     style="@style/text.xsmall.green"
                     android:paddingLeft="@dimen/pd_xxxsmall"
-                    android:text="@string/flat_district"/>
+                    android:text="@string/flat_district" />
 
                 <Spinner
                     android:id="@+id/districtSpinner"
-                    style="@style/item"
-                    android:layout_marginTop="@dimen/pd_xxsmall"
-                    android:paddingLeft="@dimen/pd_xxxsmall"/>
+                    style="@style/edit_profile.input"
+                    android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
+                    android:paddingLeft="@dimen/pd_xxxsmall" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="3px"
                     android:layout_marginLeft="@dimen/pd_xxxsmall"
                     android:layout_marginRight="@dimen/pd_xxxsmall"
-                    android:background="@color/black_lightest"/>
+                    android:background="@color/black_lightest" />
 
                 <LinearLayout
                     android:id="@+id/area_layout"
                     style="@style/linear"
-                    android:layout_marginTop="@dimen/pd_xxsmall"
                     android:layout_marginBottom="@dimen/pd_xxsmall"
+                    android:layout_marginTop="@dimen/pd_xxsmall"
                     android:visibility="visible">
 
                     <TextView
                         android:id="@+id/areaLabel"
                         style="@style/text.xsmall.green"
                         android:paddingLeft="@dimen/pd_xxxsmall"
-                        android:text="@string/flat_area"/>
+                        android:text="@string/flat_area" />
 
                     <Spinner
                         android:id="@+id/areaSpinner"
-                        style="@style/item"
-                        android:layout_marginTop="@dimen/pd_xxsmall"
+                        style="@style/edit_profile.input"
+                        android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
                         android:clickable="false"
-                        android:paddingLeft="@dimen/pd_xxsmall"/>
+                        android:paddingLeft="@dimen/pd_xxxsmall" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="3px"
                         android:layout_marginLeft="@dimen/pd_xxxsmall"
                         android:layout_marginRight="@dimen/pd_xxxsmall"
-                        android:background="@color/black_lightest"/>
+                        android:background="@color/black_lightest" />
                 </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/street_wrapper"
-                    style="@style/item">
+                    style="@style/text_input_layout">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/street"
-                        style="@style/input"
-                        android:hint="@string/flat_street"/>
+                        style="@style/edit_profile.input"
+                        android:hint="@string/flat_street" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/building_wrapper"
-                    style="@style/item">
+                    style="@style/text_input_layout">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/building"
-                        style="@style/input"
-                        android:hint="@string/flat_building"/>
+                        style="@style/edit_profile.input"
+                        android:hint="@string/flat_building" />
 
                 </android.support.design.widget.TextInputLayout>
 
-                <include layout="@layout/layout_flat_warning_block"/>
+                <include layout="@layout/layout_flat_warning_block" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
