--- a/app/src/main/res/values/flat_styles.xml
+++ b/app/src/main/res/values/flat_styles.xml
@@ -2,10 +2,10 @@
 <resources>
 
     <style name="flat" parent="input">
-        <item name="android:textSize">@dimen/ts_xlarge</item>
-        <item name="android:background">@drawable/ag_back_edittext</item>
+        <item name="android:textSize">@dimen/ts_normal</item>
+        <!--<item name="android:background">@drawable/ag_back_edittext</item>-->
         <item name="android:textColorHint">@color/editHintColor</item>
-        <item name="android:textColor">@color/editTextColor</item>
+        <item name="android:textColor">@color/black_light</item>
     </style>
 
     <style name="flat.inactive">
@@ -13,6 +13,7 @@
     </style>
 
     <style name="flat.auto">
+        <item name="android:paddingTop">3dp</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:inputType">textAutoComplete</item>
     </style>
