--- a/app/src/main/res/layout/fragment_info_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_info_tab_profile.xml
@@ -81,6 +81,7 @@
 
                     <RelativeLayout
                         style="@style/linear"
+                        android:onClick="@{()->viewModel.showDialogEditProfile()}"
                         android:paddingBottom="@dimen/pd_xsmall"
                         android:paddingTop="@dimen/pd_xsmall">
 
