--- a/app/src/main/res/layout/fragment_new_my_points.xml
+++ b/app/src/main/res/layout/fragment_new_my_points.xml
@@ -96,7 +96,7 @@
                 </android.support.v4.widget.SwipeRefreshLayout>
 
                 <TextView
-                    android:id="@+id/empty"
+                    android:id="@android:id/empty"
                     style="@style/emptylist"/>
             </FrameLayout>
         </LinearLayout>
