--- a/app/src/main/res/layout/fragment_tab_poll.xml
+++ b/app/src/main/res/layout/fragment_tab_poll.xml
@@ -29,6 +29,10 @@
                     style="@style/root" />
 
             </android.support.v4.widget.SwipeRefreshLayout>
+
+            <TextView
+                android:id="@android:id/empty"
+                style="@style/emptylist" />
         </RelativeLayout>
     </RelativeLayout>
 </layout>
