--- a/app/src/main/res/layout/layout_flat_warning_block.xml
+++ b/app/src/main/res/layout/layout_flat_warning_block.xml
@@ -9,6 +9,7 @@
         <ImageView
             android:id="@+id/warningEditingBlocked"
             style="@style/wrap"
+            android:visibility="gone"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -20,7 +21,7 @@
             android:layout_toRightOf="@id/warningEditingBlocked"
             android:paddingLeft="@dimen/pd_xxsmall"
             android:text="@string/error_short_editing_blocked"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/tvWarningEditingBlocked"
