правки визарда задания места жительства

--- a/app/src/main/res/layout/layout_flat_warning_block.xml
+++ b/app/src/main/res/layout/layout_flat_warning_block.xml
@@ -21,7 +21,7 @@
             android:layout_toRightOf="@id/warningEditingBlocked"
             android:paddingLeft="@dimen/pd_xxsmall"
             android:text="@string/error_short_editing_blocked"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tvWarningEditingBlocked"
