--- a/app/src/main/res/layout/item_innovation_old.xml
+++ b/app/src/main/res/layout/item_innovation_old.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout style="@style/item.linear"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:padding="@dimen/pd_xsmall">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/text.large.black"/>
+    <LinearLayout
+        style="@style/item.linear"
+        android:padding="@dimen/pd_xsmall">
 
-    <TextView
-        android:id="@+id/innEndedDate"
-        style="@style/text.gray"
-        android:text="@string/innovation_ended"/>
-</LinearLayout>
+        <TextView
+            android:id="@+id/title"
+            style="@style/text.large.black" />
+
+        <TextView
+            android:id="@+id/innEndedDate"
+            style="@style/text.gray"
+            android:text="@string/innovation_ended" />
+    </LinearLayout>
+</layout>
