--- a/app/src/main/res/layout/fragment_custom_flat.xml
+++ b/app/src/main/res/layout/fragment_custom_flat.xml
@@ -8,90 +8,104 @@
             type="ru.mos.polls.newprofile.vm.CustomFlatFragmentVM" />
     </data>
 
-    <LinearLayout
-        android:id="@+id/layout_main"
-        style="@style/root"
-        android:background="@color/white">
+    <RelativeLayout
+        style="@style/root">
 
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/item"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+        <FrameLayout
+            android:id="@+id/root"
+            style="@style/root">
             <LinearLayout
-                style="@style/linear"
-                android:padding="@dimen/pd_xsmall">
+                android:id="@+id/layout_main"
+                style="@style/root"
+                android:background="@color/white">
 
-                <TextView
-                    style="@style/text.xsmall.green"
-                    android:paddingLeft="@dimen/pd_xxxsmall"
-                    android:text="@string/flat_district" />
 
-                <Spinner
-                    android:id="@+id/districtSpinner"
-                    style="@style/edit_profile.input"
-                    android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
-                    android:paddingLeft="@dimen/pd_xxxsmall" />
-
-                <View
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="3px"
-                    android:layout_marginLeft="@dimen/pd_xxxsmall"
-                    android:layout_marginRight="@dimen/pd_xxxsmall"
-                    android:background="@color/black_lightest" />
+                    android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:id="@+id/area_layout"
-                    style="@style/linear"
-                    android:layout_marginBottom="@dimen/pd_xxsmall"
-                    android:layout_marginTop="@dimen/pd_xxsmall"
-                    android:visibility="visible">
+                    <LinearLayout
+                        style="@style/linear"
+                        android:padding="@dimen/pd_xsmall">
 
-                    <TextView
-                        android:id="@+id/areaLabel"
-                        style="@style/text.xsmall.green"
-                        android:paddingLeft="@dimen/pd_xxxsmall"
-                        android:text="@string/flat_area" />
+                        <TextView
+                            style="@style/text.xsmall.green"
+                            android:paddingLeft="@dimen/pd_xxxsmall"
+                            android:text="@string/flat_district" />
 
-                    <Spinner
-                        android:id="@+id/areaSpinner"
-                        style="@style/edit_profile.input"
-                        android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
-                        android:clickable="false"
-                        android:paddingLeft="@dimen/pd_xxxsmall" />
+                        <Spinner
+                            android:id="@+id/districtSpinner"
+                            style="@style/edit_profile.input"
+                            android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
+                            android:paddingLeft="@dimen/pd_xxxsmall" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="3px"
-                        android:layout_marginLeft="@dimen/pd_xxxsmall"
-                        android:layout_marginRight="@dimen/pd_xxxsmall"
-                        android:background="@color/black_lightest" />
-                </LinearLayout>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="3px"
+                            android:layout_marginLeft="@dimen/pd_xxxsmall"
+                            android:layout_marginRight="@dimen/pd_xxxsmall"
+                            android:background="@color/black_lightest" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/street_wrapper"
-                    style="@style/text_input_layout">
+                        <LinearLayout
+                            android:id="@+id/area_layout"
+                            style="@style/linear"
+                            android:layout_marginBottom="@dimen/pd_xxsmall"
+                            android:layout_marginTop="@dimen/pd_xxsmall"
+                            android:visibility="visible">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/street"
-                        style="@style/edit_profile.input"
-                        android:hint="@string/flat_street" />
+                            <TextView
+                                android:id="@+id/areaLabel"
+                                style="@style/text.xsmall.green"
+                                android:paddingLeft="@dimen/pd_xxxsmall"
+                                android:text="@string/flat_area" />
 
-                </android.support.design.widget.TextInputLayout>
+                            <Spinner
+                                android:id="@+id/areaSpinner"
+                                style="@style/edit_profile.input"
+                                android:layout_marginTop="@dimen/pd_pd_xxxsmall_m"
+                                android:clickable="false"
+                                android:paddingLeft="@dimen/pd_xxxsmall" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/building_wrapper"
-                    style="@style/text_input_layout">
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="3px"
+                                android:layout_marginLeft="@dimen/pd_xxxsmall"
+                                android:layout_marginRight="@dimen/pd_xxxsmall"
+                                android:background="@color/black_lightest" />
+                        </LinearLayout>
 
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/building"
-                        style="@style/edit_profile.input"
-                        android:hint="@string/flat_building" />
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/street_wrapper"
+                            style="@style/text_input_layout">
 
-                </android.support.design.widget.TextInputLayout>
+                            <android.support.design.widget.TextInputEditText
+                                android:id="@+id/street"
+                                style="@style/edit_profile.input"
+                                android:hint="@string/flat_street" />
 
-                <include layout="@layout/layout_flat_warning_block" />
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/building_wrapper"
+                            style="@style/text_input_layout">
+
+                            <android.support.design.widget.TextInputEditText
+                                android:id="@+id/building"
+                                style="@style/edit_profile.input"
+                                android:hint="@string/flat_building" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <include layout="@layout/layout_flat_warning_block" />
+                    </LinearLayout>
+                </ScrollView>
             </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
+        </FrameLayout>
+    </RelativeLayout>
 </layout>
